--- a/min/quick-test.css
+++ b/min/quick-test.css
@@ -1,11 +1,7 @@
-/*! This file exists only for testing a Minify installation. It's content is not used.
- *
- * http://example.org/min/f=min/quick-test.css
- */
+AAA
 
-@import     url( more.css );
 
-    body, td, th {
+body, td, th {
         font-family: Verdana , "Bitstream Vera Sans" , Arial Narrow, sans-serif ;
 
 	font-size  : 12px;
