--- a/min/quick-test.less
+++ b/min/quick-test.less
@@ -3,4 +3,10 @@
  * http://example.org/min/f=min/quick-test.less
  */
 
-@import url(quick-test.css);
+// LESS import statement shares syntax with the CSS import statement.
+// If the file being imported ends in a .less extension, or no extension, then it is treated as a LESS
+// import. Otherwise it is left alone and outputted directly.
+// http://leafo.net/lessphp/docs/#import
+@import "quick-test.css";
+
+@import "quick-testinc.less";
